--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,5 +1,10 @@
 #summary Release Notes for each release
 
+= v0.1.1 =
+
+  * Fixed Issue 1: spelling mistake
+  * Fixed Issue 2: crash when System.DBNull provided as a value
+
 = v0.1 =
 
   * First release
