--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,4 +1,9 @@
 #summary Release Notes for each release
+= v0.1.2 (not released)
+  
+  * Support for tags that have attributes without quotes around the values
+  * Corrected behaviour when tags have no corresponding param set
+  * Preliminary support for confirming params are in template when set
 
 = v0.1.1 2011-07-04 =
 
